force-app/main/default/objects/ssot__Occupation__dlm/fields/ssot__NatureofWorkDescription__c.field-meta.xml
<CustomField>
    <fullName>ssot__NatureofWorkDescription__c</fullName>
    <label>Nature of Work</label>
    <length>255</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>NatureofWorkDescription</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>