force-app/main/default/objects/ssot__Occupation__dlm/fields/ssot__OccupationStatus__c.field-meta.xml
<CustomField>
    <fullName>ssot__OccupationStatus__c</fullName>
    <label>Occupation Status</label>
    <length>15</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>OccupationStatus</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>