force-app/main/default/objects/ssot__Occupation__dlm/fields/ssot__TitlingPolicyDescription__c.field-meta.xml
<CustomField>
    <fullName>ssot__TitlingPolicyDescription__c</fullName>
    <label>Titling Policy</label>
    <length>255</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>TitlingPolicyDescription</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>